# Phoenix-Digital-Twin

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  pytest.ini
backend/: .dockerignore  CHATBOT_FIX_SUMMARY.md  Dockerfile  README.md  pyproject.toml  test_api_key.py  test_chatbot_demo.py
backend/docs/: test-scenarios.md
backend/src/backend/: __init__.py  constants.py  main.py
backend/src/backend/app/: main.py
backend/src/backend/app/api/: deps.py
backend/src/backend/app/api/routes/: chat.py  idsl.py  twin.py
backend/src/backend/app/core/: config.py
backend/src/backend/app/idsl/: loader.py  repository.py
backend/src/backend/app/models/: chat.py  idsl.py  simulator.py
backend/src/backend/app/services/: anomaly_detector.py  chatbot.py  simulator.py
backend/src/backend/templates/: dashboard.html
backend/tests/: test_chat_service.py  test_dashboard.py  test_ids_loader.py  test_simulator.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AlertPanel.tsx  ChatBot.tsx  FaultInjector.tsx  HistoryView.tsx  KpiBar.tsx  TelemetryTable.tsx  ThreeScene.tsx  TopologyView.tsx  TrendChart.tsx
frontend/lib/: api.ts  types.ts
